fixed tweets stats row,added ellipsis rendering when profile text is too long

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -27,6 +27,8 @@
 	}
 }
 
+
+
 $theme-color: white;
 $sub-theme-color: rgba(239, 243, 244, 0.5);
 
@@ -763,6 +765,10 @@ li {
 			box-sizing: border-box;
 			justify-content: space-around;
 		}
+		b{
+			overflow-x: hidden;
+			text-overflow: ellipsis;
+		}
 		div {
 			font-weight: 400;
 			color: rgb(83, 100, 113);
@@ -1393,7 +1399,7 @@ button:hover {
 	&_statistics-row {
 		display: flex;
 		justify-content: space-between;
-		width: 100%;
+		min-width: 100%;
 		height: 32px;
 		box-sizing: border-box;
 		padding-top: 12px;
